soluciones/chart-ploopez/templates/laravel-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laravel-ingress
  namespace: laravel
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: laravel.com
    http:
      paths:
      - path: /laravel
        pathType: Prefix
        backend:
          service:
            name: laravel-service
            port:
              number: 8000
